[gd_scene load_steps=9 format=3 uid="uid://cqj2q0dsekv8t"]

[ext_resource type="Script" path="res://src/main/world/environment/obstacle-map-shadows.gd" id="1"]
[ext_resource type="Script" path="res://src/main/world/shadow-caster-shadows.gd" id="2"]
[ext_resource type="PackedScene" path="res://src/main/world/environment/OvalShadow.tscn" id="3"]
[ext_resource type="PackedScene" path="res://src/main/world/creature/CreatureShadows.tscn" id="4"]
[ext_resource type="Script" path="res://src/main/world/environment/lemon/environment-shadows.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://be5u580xi73hv" path="res://assets/main/world/environment/cell-shadow.png" id="6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mtgu7"]
texture = ExtResource("6")
texture_region_size = Vector2i(212, 212)
0:0/0 = 0

[sub_resource type="TileSet" id="2"]
tile_size = Vector2i(128, 64)
sources/0 = SubResource("TileSetAtlasSource_mtgu7")

[node name="Shadows" type="Node2D"]
modulate = Color(1, 1, 1, 0.627451)
script = ExtResource("5")

[node name="ObstacleMapShadows" type="TileMap" parent="."]
tile_set = SubResource("2")
format = 2
script = ExtResource("1")

[node name="CreatureShadows" parent="." instance=ExtResource("4")]

[node name="ShadowCasterShadows" type="Node2D" parent="."]
script = ExtResource("2")
OvalShadowScene = ExtResource("3")
